2010-04-18  Jay Belanger  <jay.p.belanger@gmail.com>

	* calc.el (calc-mode-map): Bind "O" to `calc-missing-key'.

	* calc-bin.el (calc-radix): Have the "O" option turn on
	twos-complement mode.

2010-04-17  Jay Belanger  <jay.p.belanger@gmail.com>

	* calc-ext.el (calc-init-extensions): Add keybinding for 'calc-option'.
	Add `calc-option-prefix-help' to calc-help autoloads.
	(calc-inverse): Add "Option" to message, as appropriate.
	(calc-hyperbolic): Add "Option" to message, as appropriate.
	(calc-option, calc-is-option): New functions.

	* calc-help.el (calc-full-help):  Add `calc-option-help'.
	(calc-option-prefix-help): New function.

	* calc-misc.el (calc-help): Add "Option" entry.

	* calc.el (calc-local-var-list): Add `calc-option-flag'.
	(calc-option-flag): New variable.
	(calc-do): Set `calc-option-flag to nil.
	(calc-set-mode-line): Add "Opt " as appropriate.

2010-04-16  Juri Linkov  <juri@jurta.org>

	Move scrolling commands from simple.el to window.el
	because their primitives are implemented in window.c.

	* simple.el (scroll-error-top-bottom)
	(scroll-up-command, scroll-down-command, scroll-up-line)
	(scroll-down-line, scroll-other-window-down)
	(beginning-of-buffer-other-window, end-of-buffer-other-window):
	* window.el (scroll-error-top-bottom)
	(scroll-up-command, scroll-down-command, scroll-up-line)
	(scroll-down-line, scroll-other-window-down)
	(beginning-of-buffer-other-window, end-of-buffer-other-window):
	Move from simple.el to window.el because their primitives are
	implemented in window.c.

2010-04-16  Juri Linkov  <juri@jurta.org>

	* isearch.el (isearch-lookup-scroll-key): Check both
	`isearch-scroll' and `scroll-command' properties.
	(scroll-up, scroll-down): Remove `isearch-scroll' property.

	* mwheel.el (mwheel-scroll): Remove `isearch-scroll' property.

	* simple.el (scroll-up-command, scroll-down-command)
	(scroll-up-line, scroll-down-line): Remove `isearch-scroll' property.

2010-04-15  Juri Linkov  <juri@jurta.org>
