@@ -356,11 +356,11 @@ the list is a three-string list TAG, KIND, REV."
       tags)))
 
 (defvar font-lock-mode)
-(defun cvs-refontify (beg end)
-  (when (and (boundp 'font-lock-mode)
-	     font-lock-mode
-	     (fboundp 'font-lock-fontify-region))
-    (font-lock-fontify-region (1- beg) (1+ end))))
+;; (defun cvs-refontify (beg end)
+;;   (when (and (boundp 'font-lock-mode)
+;; 	     font-lock-mode
+;; 	     (fboundp 'font-lock-fontify-region))
+;;     (font-lock-fontify-region (1- beg) (1+ end))))
 
 (defun cvs-status-trees ()
   "Look for a lists of tags, and replace them with trees."
